fix older MC versions